--- a/8-asynchronous-JS/starter/asynchronous.html
+++ b/8-asynchronous-JS/starter/asynchronous.html
@@ -9,7 +9,42 @@
 <body>
     <h1>Asynchronous JavaScript</h1>
     <script>
-        
+        /*
+        const second = () => {
+            setTimeout(() => {
+                console.log('async hey there');
+            }, 2000);
+        }
+
+
+        const first = () => {
+            console.log('Hey there');
+            second();
+            console.log('the end');
+        }
+
+        first();
+        */
+        function getRecipe() {
+            setTimeout(() => {
+                const recipeID = [553, 883, 432, 974];
+                console.log(recipeID);
+
+                setTimeout((id) => {
+                    const recipe = { title: 'Fresh tomato pasta', publisher: 'Jonas' };
+                    console.log(`${id}: ${recipe.title}`);
+
+                    setTimeout(publisher => {
+                        const recipe2 = {title: 'Italian pizza', publisher: 'Jonas'};
+                        console.log(recipe);
+                    }, 1500, recipe.publisher)
+                }, 1500, recipeID[2]);
+            }, 1500);
+        }
+        getRecipe();
+
+
+
     </script>
 </body>
 </html>
